--- a/1-grid-world/1-policy-iteration/policy_iteration.ipynb
+++ b/1-grid-world/1-policy-iteration/policy_iteration.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Policy Iteration\n",
     "#### Bellman Expectation Equation\n",
-    "##### *Mintae Kim, Hybrid Robotics Labs, UC Berkeley*\n",
+    "##### *Mintae Kim, Hybrid Robotics Lab, UC Berkeley*\n",
     "##### 07/15/2023"
    ]
   },
